project/phase2/test/test_2_r02.out
Error type 2 at Line 9: "diff" is invoked without a definition
Error type 8 at Line 10: incompatiable return type
