project/phase2/test/test_2_r02.spl
int sum(int x, int y)
{
  int res = x + y;
  return res;
}
int test_2_r02()
{
  int a1, a2;
  float b = diff(a1, a2);
  return b;
}
